# gwa

./: .gitignore  README.md  gwa_torch.py  pyproject.toml
conf/: config.yaml  hyperparams.yaml
conf/arch/: convnext_femto.yaml  convnext_pico.yaml  vit_b_pretrained.yaml  vit_cifar.yaml  vit_s.yaml
conf/dataset/: cifar10.yaml  imagenet.yaml  inat18.yaml  places365.yaml
conf/optim/: adam.yaml  adamw.yaml  sgd.yaml
src/: main.py  train.py
src/datasets/: __init__.py  augment.py  pipeline.py  transforms.py  utils.py
src/datasets/prepare/: README.md  check_jpeg.py  cifar.py  cifar_c.py  imagenet.py  inat.py
src/networks/: __init__.py  convnext.py  vit.py  vit_pretrained.py
src/training/: alignment.py  checkpoint.py  functions.py  utils.py
