[project]
name = "gwa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.4",
    "hydra-core>=1.3.2",
    "jax[cuda12]>=0.8.0",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "tensorflow-cpu>=2.18.0",
    "tqdm>=4.67.1",
]
